--- a/contactService/src/main/resources/application.properties
+++ b/contactService/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.application.name=contact-service
+
+eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone=http://localhost:8671/eureka/
