--- a/userService/src/main/resources/application.properties
+++ b/userService/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.application.name=user-service
+
+eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone=http://localhost:8671/eureka/
